--- a/templates/authentication/registration.html
+++ b/templates/authentication/registration.html
@@ -13,6 +13,23 @@
  
  <main id="main">
 
+
+    <!-- ======= Breadcrumbs ======= -->
+  <section id="breadcrumbs" class="breadcrumbs">
+    <div class="container">
+
+      <div class="d-flex justify-content-between align-items-center">
+        <h2>Registration</h2>
+        <ol>
+          <li><a href="index.html">Home</a></li>
+          <li>Contact</li>
+        </ol>
+      </div>
+
+    </div>
+  </section><!-- End Breadcrumbs -->
+
+
     <!-- ======= About Us Section ======= -->
     <section id="contact" class="contact">
        
